body upated for all table on swagger
